# rygnal-core

./: README.md  pyproject.toml  requirements-dev.txt
demo/: cli_output.py  demo_tools.py  run_demo.py  scenario_runner.py
docs/: 00-index.md  01-research-before-building.md  02-tools-and-tech-stack.md  03-production-architecture.md  04-low-cost-production-plan.md  05-mvp-demo-plan.md  08-audit-log-schema.md  09-risk-engine.md  10-real-scenario-runner.md  13-cli-output.md  14-security-hardening.md  15-policy-engine-v2-research.md  16-sdk-boundary.md  17-cli-approval-workflow.md  18-adversarial-scenarios.md  21-openai-tool-calling-integration.md  25-policy-explain-cli-audit.md  26-rygnal-cli-v1.md  28-risk-engine-v2-foundation.md  31-policy-test-fixtures.md  33-local-fastapi-service.md  34-approval-queue-api-design.md  35-role-based-approval-design.md  37-audit-viewer-dashboard-plan.md  39-optional-live-openai-demo.md  40-live-mcp-client-server.md  architecture.md  archive-early-planning.md  getting-started.md  known-limitations.md  tool-side-effects.md  v0.1-scope.md
examples/: live_mcp_client_server.py  live_openai_demo.py  openai_tool_calling_adapter.py
policies/: default_policy.yaml  production_safe_policy.yaml
tests/: test_adversarial_scenarios.py  test_api_import_side_effect.py  test_approval_authorization_engine.py  test_approval_queue_api_design_docs.py  test_approval_request_model_hardening.py  test_audit_integrity_secret_redaction_regression.py  test_audit_logger.py  test_audit_viewer_dashboard_plan_docs.py  test_changed_files.py  test_cli_output.py  (+41 more)
(+29 files in other folders)
