[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rygnal-core"
version = "0.1.0"
description = "Runtime security and governance control layer for AI agent actions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1"
]

[project.scripts]
rygnal = "rygnal.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.bandit]
exclude_dirs = ["tests"]
skips = []


[tool.setuptools.packages.find]
where = ["src"]
